public/stylesheets/site.css
body {
    background-color: #4E3E30;
    color: white;
    font-family: 'Lucida Grande', 'Helvetica Neue', sans-serif;
    font-size: 13px;
}

.retro {
	color: #d7ceb2;
	font: 72px 'Sansita One';
	text-align: center;
	text-shadow: 3px 3px 0px #393D48, 6px 6px 0px #5c5f72;
    margin-bottom: 40px;
}

.nav-text {
    font-size: 25px;
    margin-top: 75px;
    text-align: center;
}

.nav-text a {
    color: #d7ceb2;
    padding: 5px 5px 5px 5px;
    text-decoration: none;
}

.nav-text a:hover {
    padding: 5px 5px 5px 5px;
    background-color: #d7ceb2;
    color: #4E3E30;
    border: 1px solid black;
    -webkit-border-radius: 6px;
    -moz-border-radius: 6px;
    border-radius: 6px;
}

.sideInfo ul {
	width: 50px;
	height: 50px;
	background-color: white;
}

.labelContainer {
    margin: 20px;
    width: 250px;
    text-align: center;
    font-family: 'Helvetica Neue', sans-serif;
}

.spots {
	margin-top: -190px;
}

.detail {
	color: black;
}
.detail p {
	color: black;
}

.detail h3 {
	color: black;
	font-size: 15px;
}

.detail .close {
	padding-left: 590px;
	padding-top: -60px;
}


.tags {
    color:  white;
    margin-top: 30px;
}

.tags .tag-text {
    font-size: 18px;
    font-weight: bold;
    margin-bottom: 8px;
}

.tags .tag {
    font-size: 11px;
    margin: 1px 5px 5px 15px;
    float: left;
    background: #4E3E30;
    color:  white;
    border: 1px solid #CDC5B2;
}

.tags .tag:hover {
    background-color: #d7ceb2;
    color: #4E3E30;
}

.tags .name {
    padding: 20px 6px 0 6px;
}

.tags .tag-line {
    border-left: 1px solid #CDC5B2;
    line-height: 17px
}

.tags .count {
    padding: 0 6px 0 6px;
}

.admin .tags ul {
    color:  #d7ceb2;
}

.admin .tags li {
    margin-top: -9px;
}
.admin .tags .del-link {
    padding-left: 10px;
    color: #808080;
}

.admin .tags .del-link:hover {
    color:  #d7ceb2;
}

.admin .images .preview-image {
    width: 40px;
    height: 40px;
}

.admin .images h4 {
    font-size: 25px;
}

